# vault-coverr

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json  skills-lock.json  vaultcover-prototype.html
.opencode/agents/: design-system-auditor.md  senior-coder.md
contract/: Cargo.toml  Odra.toml  README.md  build_wasm.ps1
contract/src/: lib.rs  vault_cover.rs
contract/wasm/: VaultCoverContract.wasm
scripts/: seed-demo-vaults.ps1
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: NavSidebar.tsx  layout.tsx
src/app/(app)/health/: page.tsx
src/app/(app)/policies/: page.tsx
src/app/(app)/risk/: page.tsx
src/app/(app)/vaults/: page.tsx
src/components/: AgentSignalCard.tsx  ConnectWallet.tsx  ContractStatusPanel.tsx  DemoModeBadge.tsx  Metric.tsx  OnChainPolicyStep.tsx  OnchainPendingBadge.tsx  PolicyCard.tsx  RiskScoreBar.tsx  SectionHeader.tsx  TriggerBadge.tsx  TxHashRow.tsx  VaultCard.tsx  WalletProvider.tsx
src/components/app-pages/health/: HealthMonitorSurface.tsx
src/components/app-pages/policies/: ClearPoliciesDialog.tsx  PoliciesHero.tsx  PolicyRecord.tsx
src/components/app-pages/risk/: RiskConsole.tsx
src/components/app-pages/vaults/: VaultExplorerCard.tsx  (+1 more)
src/components/app-shell/: AppShellIcons.tsx
src/components/brand/: BrandLogo.tsx
src/components/landing/: AgentSignal.tsx  LandingFooter.tsx  LandingMotion.tsx  LandingNav.tsx  ProtectionLoop.tsx  RiskOrbit.tsx  VaultShowcase.tsx
src/lib/: casper-wallet.ts  contract-errors.ts  demo-state.ts  mock-data.ts  types.ts
(+9 files in other folders)
