[package]
name = "vaultcover"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.6.0"

[dev-dependencies]
odra-test = "2.6.0"

[build-dependencies]
odra-build = "2.6.0"

[[bin]]
name = "vaultcover_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "vaultcover_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
